# brinfo

./: .gitignore  Analysis.cpp  BrInfo.cpp  CFGDOT.h  CMakeLists.txt  CondChain.cpp  CondChain.h  Condition.cpp  Matcher.h  Meta.cpp  Meta.h  MetaBridge.cpp  README.md  README.zh.md  Utils.h
docs/: CallWrapTool.md  CallWrapTool.zh.md  GTestIntegration.md  GTestIntegration.zh.md  Instrumentation.md  Instrumentation.zh.md  ReportExtractor.md  ReportExtractor.zh.md  Runtime.md  Runtime.zh.md
include/brinfo/: Condition.h  GTestAutoWrap.h  GTestSupport.h  Matcher.h  Meta.h  Runtime.h  Utils.h  debug_macros.h
src/core/: Analysis.cpp  CondChain.cpp  Condition.cpp  Meta.cpp  MetaBridge.cpp
src/frontend/: BrInfo.cpp
src/instrumenter/: Instrumenter.cpp
src/rewrite/: AutoWrapInvocations.cpp
src/runtime/: Runtime.cpp
tools/report/: README.md  README.zh..md  approx_match.py  brinfo_report.py  cond_utils.py  emitter.py  meta_loader.py  runtime_utils.py
